--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,74 @@
 /* Begin CSS for Basic-Portfolio site*/
 
-/* header */
+body {
+  	
+  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+  color: #333333;
+
+}
+
+header {
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	background: #ffffff;
+    margin: 0px 50px;
+}
+
+h2 {
+	color: #4aaaa5;
+}
+
+hr {
+	height: 2px;
+	background: #dddddd;
+}
+nav {
+
+	float: right;
+	color: #777777;
+
+}
+
+p {
+	color: #777777;
+}
+
+footer {
+	background: #666666;
+}
+
+.content-area {
+	
+    border: 2px solid #cccccc;
+    background-image: url("../images/concrete_seamless.png");
+    margin-top: 50px;
+}
+
+.name {
+    
+	background: #4aaaa5;
+	color: #ffffff;
+	width: 15%;
+	height: 30%;
+	margin-top: 100px;
+	margin-left: 50px;
+	font-size: 24px;
+
+}
+
+
+
+#main-content { 
+	background: #ffffff ;
+	width: 650px;
+	border: 1px solid #dddddd;
+}
+
+#sidebar {
+	background: #ffffff;
+	width: 270px;
+	border: 1px solid #dddddd;
+
+}
+
+/* End of CSS */
 
