--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ nav {
 	position: absolute;
 	top: 25px;
 	right: 340px;
-
+    
 }
 
 p {
@@ -51,9 +51,7 @@ form {
 .content-area {
 	border: 2px solid #cccccc;
     background-image: url("../images/concrete_seamless.png");
-    /*position: absolute;
-    right: 300px;
-    width: 960px;*/
+    
 }
 
 .name {
@@ -71,6 +69,10 @@ form {
 	display: inline-block;
 	width: 80px;
 	height: 80px;
+}
+
+.container {
+	width: 960px;
 }
 
 #main-content { 
@@ -236,6 +238,10 @@ form {
 	top: 140px;
 }
 
+/* End of CSS for Portfolio*/
+
+/* Begin CSS for Contact */
+
 #fullname {
 	width: 100%;
 	height: 20px;
@@ -261,4 +267,5 @@ form {
 	height: 50px;
 	margin: 10px;
 }
-/* End of CSS */
+/*End of CSS for Contact */
+
