--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,11 @@
-/* Begin CSS for Basic-Portfolio site*/
+/* CSS for Basic-Portfolio site*/
+/* Global elements, classes, IDs for index, portfolio, contact.html */
 
 body {
   	
   font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
   color: #333333;
-
+  margin: 0 auto;
 }
 
 header {
@@ -27,11 +28,14 @@ nav {
 	position: absolute;
 	top: 25px;
 	right: 340px;
-    
+	opacity: 0.5;
 }
 
-p {
+p { 
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 20px;
 	color: #777777;
+	line-height: 30px;
 }
 
 footer {
@@ -45,17 +49,42 @@ footer {
 
 form {
 	display: block;
-	margin: 20px;
+	margin: 30px;
 }
 
 a {
-	color: #cccccc;
+	color: #777777;
 	text-decoration: none;
 }
 
 a:hover {
 	background-color: #4aaaa5;
 }
+
+/* Sticky Footer*/
+
+* {
+	margin: 0;
+}
+html, body {
+	height: 100%;
+}
+.wrapper {
+	min-height: 100%;
+	height: auto !important; /* This line and the next line are not necessary unless you need IE6 support */
+	height: 100%;
+	margin: 0 auto -155px; /* the bottom margin is the negative value of the footer's height */
+}
+.footer, .push {
+	height: 155px; /* .push must be the same height as .footer */
+}
+
+/*
+
+Sticky Footer by Ryan Fait
+http://ryanfait.com/
+
+*/
 
 .content-area {
 	border: 2px solid #cccccc;
@@ -82,6 +111,7 @@ a:hover {
 
 .container {
 	width: 960px;
+
 }
 
 #main-content { 
@@ -122,9 +152,10 @@ a:hover {
 }
 
 #connect {
-	font-size: 24px;
+	font-size: 20px;
 	text-align: center;
 	padding: 10px;
+	font-weight: bold;
 }
 
 #img-stackoverflow {
@@ -144,7 +175,7 @@ a:hover {
 	width: 610px;
 }
 
-/* End of CSS for index*/
+/* End of CSS for Global */
 
 /* Begin CSS for Portfolio 
    Creating the figures for main content (Hangman, RPG Game, Triva Game, Widget, and RPS*/
@@ -155,8 +186,6 @@ a:hover {
     height: 204px;
     margin-left: 20px;
     margin-top: 20px;
-
-
 }
 
 #fig-hangman {
@@ -254,7 +283,6 @@ a:hover {
 #fullname {
 	width: 100%;
 	height: 20px;
-	
 }
 
 #email {
