--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,12 +23,17 @@ hr {
 	background: #dddddd;
 }
 nav {
-    font-size: 16px;
+    font-size: 20px;
 	color: #777777;
 	position: absolute;
-	top: 25px;
-	right: 340px;
-	opacity: 0.5;
+	top: 5px;
+	right: 300px;
+	padding: 20px;
+	opacity: 0.6;
+}
+
+.pike {
+	opacity: 0.1;
 }
 
 p { 
@@ -107,11 +112,11 @@ http://ryanfait.com/
 	display: inline-block;
 	width: 80px;
 	height: 80px;
+	margin-top: 20px;
 }
 
 .container {
 	width: 960px;
-
 }
 
 #main-content { 
@@ -152,10 +157,11 @@ http://ryanfait.com/
 }
 
 #connect {
-	font-size: 20px;
-	text-align: center;
-	padding: 10px;
+	font-size: 25px;
+	padding: 5px;
 	font-weight: bold;
+	position: relative;
+	right: -16px;
 }
 
 #img-stackoverflow {
@@ -172,9 +178,19 @@ http://ryanfait.com/
 }
 
 #hr-maincontent {
+	background-color: #cccccc;
 	width: 610px;
+	height: 4px;
+	margin: 20px 0px 0px 20px;
+    opacity: 0.4;
 }
-
+#hr-connect {
+	background-color: #cccccc;
+	width: 240px;
+	height: 1px;
+	margin: 10px 10px 0px 5px;
+    opacity: 0.1;
+}
 /* End of CSS for Global */
 
 /* Begin CSS for Portfolio 
@@ -263,7 +279,7 @@ http://ryanfait.com/
     height: 204px;
     margin-left: 20px;
     position: relative;
-    top: -300px;
+    top: -320px;
 }
 
 #fig-rps {
