--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,7 +155,7 @@ http://ryanfait.com/
 	background: #ffffff;
 	width: 270px;
 	border: 1px solid #dddddd;
-	margin: 50 auto;
+	margin: 50px auto;
 	float: right;
 
 }
