--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,7 +201,7 @@ http://ryanfait.com/
    Creating the figures for main content (Hangman, RPG Game, Triva Game, Widget, and RPS*/
 
 .img-hangman {
-	background-image: url("http://lorempixel.com/output/technics-q-c-210-204-1.jpg");
+	background-image: url("../images/technics-q-c-210-204-1.jpg");
     width: 210px;
     height: 204px;
     margin-left: 20px;
@@ -219,7 +219,7 @@ http://ryanfait.com/
 }
 
 .img-rpggame {
-	background-image: url("http://lorempixel.com/output/technics-q-c-210-204-2.jpg");
+	background-image: url("../images/technics-q-c-210-204-2.jpg");
     width: 210px;
     height: 204px;
     margin-left: 20px;
@@ -239,7 +239,7 @@ http://ryanfait.com/
 }
 
 .img-triviagame {
-	background-image: url("http://lorempixel.com/output/technics-q-c-210-204-5.jpg");
+	background-image: url("../images/technics-q-c-210-204-6.jpg");
     width: 210px;
     height: 204px;
     margin-left: 20px;
@@ -258,7 +258,7 @@ http://ryanfait.com/
 }
 
 .img-widget {
-	background-image: url("http://lorempixel.com/output/technics-q-c-210-204-7.jpg");
+	background-image: url("../images/technics-q-c-210-204-7.jpg");
     width: 210px;
     height: 204px;
     margin-left: 20px;
@@ -278,7 +278,7 @@ http://ryanfait.com/
 }
 
 .img-rps {
-	background-image: url("http://lorempixel.com/output/technics-q-c-210-204-9.jpg");
+	background-image: url("../images/technics-q-c-210-204-9.jpg");
     width: 210px;
     height: 204px;
     margin-left: 20px;
